problem2_3: feynmp/yy_ee

--- a/problem2_3.tex
+++ b/problem2_3.tex
@@ -1,3 +1,8 @@
+\begin{figure}[H]
+  \centering
+  \includegraphics{feynmp/yy_ee.pdf}
+\end{figure}
+
 \begin{equation}
   P_1 + P_2 = P_{+} + P_{-}
 \end{equation}
