--- a/feynmp/BH_pg.tex
+++ b/feynmp/BH_pg.tex
@@ -18,7 +18,7 @@
   \fmf{fermion}{e2,v3}
   \fmflabel{$p$}{pi}
   \fmflabel{$\gamma$}{yi}
-  \fmflabel{$p$}{po}
+  \fmflabel{$p'$}{po}
   \fmflabel{$e^{-}$}{e1}
   \fmflabel{$e^{+}$}{e2}
 \end{fmfgraph*}
