--- a/hw2.tex
+++ b/hw2.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage{hw}
 \usepackage{siunitx}
+\DeclareSIUnit\gauss{G}
 
 \title{Particle Astrophysics 959 Homework 2}
 \author{Ivan Pogrebnyak}
