--- a/problem2_2.tex
+++ b/problem2_2.tex
@@ -6,7 +6,7 @@
 \begin{equation}
   P_\gamma + P_p = P_{p'} + P_{e^{+}} + P_{e^{-}}
 \end{equation}
-Squaring both sides we get,
+Squaring both sides, and noting that in the center-of-mass frame the outgoing particles are produced at rest, we get
 \begin{equation}
   (P_\gamma + P_p)^2 = (m_p + 2m_e)^2.
 \end{equation}
