--- a/problem2_3.tex
+++ b/problem2_3.tex
@@ -20,4 +20,4 @@ For $\lambda_2 = \SI{1}{\micro\meter}$,
       = 4.2\times 10^{11} \eV = \boxed{ 0.42 \TeV }
 \end{equation}
 
-
+\red{which calculation is more precise}
