--- a/hw.sty
+++ b/hw.sty
@@ -61,6 +61,7 @@
 
 \DeclareMathOperator{\sech}{sech}
 \DeclareMathOperator\erf{erf}
+\DeclareMathOperator\erfc{erfc}
 
 \newcommand{\Ld}{\mathcal{L}}
 
