--- a/hw2.tex
+++ b/hw2.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage{hw}
+\usepackage{pdfpages}
 \usepackage{siunitx}
 \DeclareSIUnit\gauss{G}
 
@@ -35,5 +36,7 @@
 
 \section{}
 \input{problem2_8.tex}
+
+\includepdf[pages={-}]{problem2_8_b.pdf}
 
 \end{document}
