--- a/problem2_1.tex
+++ b/problem2_1.tex
@@ -6,7 +6,7 @@ By the Hillas cryterion,
 With $r=\SI{4}{\kilo\meter}$, $B=\SI{10}{\tesla}$, $Z=1$, and the particles traveling at nearly the speed of light ($\beta\rightarrow 1$),
 \begin{align}
   E_\text{max} \approx 2
-    \times \SI{3e8}{\meter\per\second} 
+    \times \SI{3e8}{\meter\per\second}
     \times 1
     \times \SI{1.602e-19}{\coulomb}
     \times \SI{10}{\tesla}
@@ -14,7 +14,15 @@ With $r=\SI{4}{\kilo\meter}$, $B=\SI{10}{\tesla}$, $Z=1$, and the particles trav
   \approx \boxed{ \SI{24}{\tera\electronvolt} }
 \end{align}
 
-\red{Discuss whether this places the LHC at about the right place on the Hillas diagram.} \\
+This places LHC below the theoretical cutoff line on the Hillas diagram, corresponding to $\sim\!10^{20}\eV$. The LHC's magnetic field and size are about 7 orders of magnitude smaller than
+the CR sources at the theoretical cutoff.
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.6\linewidth]{hillas_diagram}
+  \put(-120,25){\small Figure from}
+  \put(-120,10){\small \url{http://jemeuso.riken.jp/en/about2.html}}
+\end{figure}
+
 
 To accelerate particles to $E=\SI{1}{\zetta\electronvolt}=\SI{1e21}{\electronvolt}$, an accelerator of this size would need a magnetic field of
 \begin{equation}
