--- a/problem2_4.tex
+++ b/problem2_4.tex
@@ -20,5 +20,5 @@ To measure the particle's velocity to $5\%$,
   = \SI{1.7e-10}{\second} = \boxed{ \SI{0.17}{\nano\second} }
 \end{equation}
 
-\red{How accurate to tell an up‐moving particle from a down‐moving by 10 standard deviations?}
+%\red{How accurate to tell an up‐moving particle from a down‐moving by 10 standard deviations?}
 
