--- a/problem2_5.tex
+++ b/problem2_5.tex
@@ -45,5 +45,6 @@ For $l\approx\SI{1}{\meter}$,
   = \SI{7.5e-7}{\meter} = \boxed{ \SI{750}{\nano\meter} }
 \end{equation}
 
-\red{what technology}
+This length is comporable to the longest wavelength of visible light.
+A scintilator based detector could be used for this perpose.
 
